--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-  <title>welcome to FUN MERCHANTS!</title>
+  <title>FUN MERCHANTS</title>
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="files/favicon.png"/>
   <style>
