specify text-decoration none

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       background: black;
     }
 
+    a {
+      text-decoration: none;
+    }
+
     p {
       margin: 0px;
       display: inline-block;
