--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <meta charset="UTF-8">
   <link rel="shortcut icon" href="files/favicon.png"/>
   <style>
+    @font-face {
+      font-family: 'Comic Sans MS';
+      font-style: normal;
+      src:
+        local('Comic Sans MS'),
+        url('fonts/Comic Sans MS.ttf') format('truetype');
+    }
+
     body {
       margin: 0px;
       width: 100vw;
